# safeword

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindPolarSSL.cmake  FindSqlite3.cmake
doc/: doxygen.conf
doc/asciidoc/: asciidoc.conf  cmds-safeword.txt  safeword-add.txt  safeword-cp.txt  safeword-edit.txt  safeword-export.txt  safeword-init.txt  safeword-ls.txt  safeword-rm.txt  safeword-show.txt  safeword-tag.txt  safeword.txt
doc/bash/: safeword.bash_completion  safeword.sh
src/: CMakeLists.txt  encrypt.c  main.c  main.h.in  safeword.c  safeword.h  safeword.h.in  safeword_errno.h  security.c  security.h
src/commands/: AddCommand.c  AddCommand.h  CMakeLists.txt  Command.c  Command.h  CopyCommand.c  CopyCommand.h  EditCommand.c  EditCommand.h  ExportCommand.c  ExportCommand.h  HelpCommand.c  HelpCommand.h  InfoCommand.c  InfoCommand.h  InitCommand.c  InitCommand.h  ListCommand.c  ListCommand.h  RemoveCommand.c  RemoveCommand.h  ShowCommand.c  ShowCommand.h  TagCommand.c  TagCommand.h
test/: CMakeLists.txt  blackbox.py  credentials.json  test.c  test.h  tests_safeword_add.c  tests_safeword_add.h  tests_safeword_config.c  tests_safeword_config.h  tests_safeword_init.c  tests_safeword_init.h  tests_safeword_list.c  tests_safeword_list.h  tests_safeword_list_credentials.c  tests_safeword_list_credentials.h  tests_safeword_read.c  tests_safeword_read.h  tests_safeword_remove.c  tests_safeword_remove.h  tests_safeword_tag.c  tests_safeword_tag.h
